feat: Refactor OTP controller error handling to use instance checks for better type safety
feat: Enhance admin middleware with a typed request interface for user data

feat: Improve app server configuration with additional middleware and structured logging

feat: Introduce CompanyProfile entity and related services for company management

feat: Create a base controller for shared response handling and error management

feat: Add utility functions for cookie management and error handling

feat: Implement upload service for file handling with S3 integration

feat: Develop comprehensive validation schemas for common fields and queries

feat: Enhance user utilities for sanitizing user data and extracting user information

feat: Establish a robust password validation utility for security compliance

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon",
     "build": "tsc -p tsconfig.json",
     "start": "node -r tsconfig-paths/register dist/index.js",
+    "test:s3": "node test-s3-routes.js",
     "lint": "eslint \"src/**/*.ts\" --max-warnings=0"
   },
   "keywords": [],
@@ -32,23 +33,29 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.883.0",
+    "@types/jest": "^30.0.0",
     "@types/multer": "^2.0.0",
+    "@types/supertest": "^6.0.3",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.19.2",
+    "form-data": "^4.0.4",
     "google-auth-library": "^9.15.1",
     "helmet": "^7.1.0",
     "inversify": "^6.2.2",
+    "jest": "^30.1.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
     "nodemon": "^3.1.10",
     "redis": "^4.6.15",
     "reflect-metadata": "^0.2.2",
+    "supertest": "^7.1.4",
     "zod": "^3.25.76"
   }
 }
